--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
 
 		</section>
 		<footer>
+			<a class="twitter" href="https://twitter.com/WebDev_Antonio"><img src="img/twitter.png" alt=""></a>
+			<a class="linkedIn" href="https://www.linkedin.com/in/wilson-portillo/"><img src="img/linkedin.png" alt=""></a>
 			<h3>Copyright © 2017 Wilson Portillo • Web Designer & Developer</h3>
 		</footer>
 		<script src="http://code.jquery.com/jquery-latest.min.js"></script>
