--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 		<section class="headerSection">
 			<nav>
 				<ul>
-					<li class="butSize1">home</li>
-					<li class="butSize2">about</li>
-					<li class="butSize3">skill set</li>
-					<li class="butSize4">experience</li>
-					<li class="butSize5">contact</li>
+					<li class="homeButton"><a class="butSize1" href="#">home</a></li>
+					<li class="aboutButton"><a class="butSize2" href="#">about</a></li>
+					<li class="skillButton"><a class="butSize3" href="#">skill set</a></li>
+					<li class="expButton"><a class="butSize4" href="#">experience</a></li>
+					<li class="contactButton"><a class="butSize5" href="#">contact</a></li>
 				</ul>
 			</nav>
 			<h1>wilson portillo</h1>
@@ -103,7 +103,17 @@
 			<div class="titleSection">
 				<h2>contact</h2>
 			</div>
-
+			<div class="contactDiv">
+				<form>
+				  <span>Name</span>
+				  <input type="text" id="name" placeholder="Wilson Portillo">
+				  <span>E-Mail</span>
+				  <input type="e-mail" id="email" placeholder="wilsonaportillo@gmail.com">
+				  <span>Message</span>
+				  <input type="text" id="msg" placeholder="Enter your message here...">
+				</form>
+			</div>
+			<input class="button" type="button" value="SEND">
 		</section>
 		<footer>
 			<a class="twitter" href="https://twitter.com/WebDev_Antonio"><img src="img/twitter.png" alt=""></a>
